20050930:  version 0.7.2 (unreleased):
           Fixed bug in interp function when order=0.
           Modified to work with the new ContourSet returned
           by contour and contourf.
           Axes frame turned off by default for non-rectangular
           projections ('ortho','robin' and 'moll').
           Added createfigure method to create a figure with the 
           same aspect ratio as the map using pylab.figure.
20050921:  version 0.7.1:
           Fixed several bugs in meridian/parallel labelling and
           Cylindrical projections that crossed greenwich were not
           being handled properly.
           Added 'fmt' keyword arg to drawmeridians and drawparallels
           (default is '%g').
           Fixed bug in 'readshapefile' that prevented boundaries from
           being drawn for 'cyl','merc' or 'miller' projections when the
           map region did not cross the greenwich meridian.
           Modified imshow method so 'origin' keyword is accepted (it
           was always set to 'lower' previously).
           Added testgdal.py example showing how to plot raster
           geospatial data with gdal module (gdal.maptools.org).
           Meridians and parallels labelled correctly when
           rcParams['text.usetext']=True.
20050914:  version 0.7:
           Optimizations to reduce the time it takes to create
           a Basemap class instance - now nearly 4 times faster
           when using resolution='i'.
           Added 'h' (high) resolution boundary data.
           Added datasets for major rivers, "drawrivers" class method.
           Fixed some errors in boundaries datasets.
           Boundary datasets now installed in a separate package.
           Should now handle Numeric to numarray conversions internally,
           so removed warning when rcParams['numerix'] != 'numarray'.
           Changed default area_thresh so it depends on coastline
           resolution (10000 for 'c' declining to 10 for 'h').