@@ -1,4 +1,4 @@
-20050930:  version 0.7.2 (unreleased):
+20051002:  version 0.7.2 (unreleased):
            Fixed bug in interp function when order=0.
            Modified to work with the new ContourSet returned
            by contour and contourf.
@@ -6,6 +6,10 @@
            projections ('ortho','robin' and 'moll').
            Added createfigure method to create a figure with the 
            same aspect ratio as the map using pylab.figure.
+           Resets subplot.params defaults so that default
+           axes rectangle will have both a width and height of 0.9
+           (this ensures that the figure size determines that aspect
+           ratio of the plot).
 20050921:  version 0.7.1:
            Fixed several bugs in meridian/parallel labelling and
            Cylindrical projections that crossed greenwich were not
